# polyglot-bazel-nix-monorepo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  devenv.nix  devenv.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
projects/java_greeter/: devenv.nix
projects/react-cra/: BUILD.bazel  cra.bzl  devenv.nix  package.json
projects/react-cra/src/: BUILD.bazel
